sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if (ecart = 10)
                  ^AlgCombSort11:13: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (ecart = 9)
                       ^